# hydraulic-motor-optimizer

./: CMakeLists.txt  LICENSE  README.md
include/: bspline.h  cam_utils.h  common.h  config.h  constraints.h  csv_utils.h  design.h  design_vector.h  dxf_export.h  fft.h  fluid_model.h  gp_optimizer.h  gradient.h  hybrid_optimizer.h  hydraulic_model.h  local_optimizer.h  objective.h  plotting.h  snapshot.h  thermal_model.h
src/: bspline.cpp  cam_utils.cpp  common.cpp  constraints.cpp  csv_utils.cpp  design_vector.cpp  dxf_export.cpp  fft.cpp  fluid_model.cpp  gp_optimizer.cpp  gradient.cpp  hybrid_optimizer.cpp  hydraulic_model.cpp  local_optimizer.cpp  main.cpp  objective.cpp  plotting.cpp  thermal_model.cpp
